objects/A_L_Potential_Pricing__c.object
<CustomObject>
	<customSettingsType>List</customSettingsType>
	<description>Computation of Architecture and Launch Services - Pricing.</description>
	<fields>
		<fullName>MAX_ASV__c</fullName>
		<label>MAX ASV</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>MIN_ASV__c</fullName>
		<label>MIN ASV</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>OPG__c</fullName>
		<label>OPG</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Price__c</fullName>
		<label>Price</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Size__c</fullName>
		<label>Size</label>
		<length>50</length>
		<type>Text</type>
	</fields>
	<label>A&amp;L Potential Pricing</label>
</CustomObject>